# cv

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
features/: detect.pyx  detection.py  distance.py  logger.py  timer.py
