[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.2.4",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "ultralytics>=8.3.225",
    "uniface>=1.2.0",
]
